--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/_fonts.css">
+    <link rel="stylesheet" href="css/_global.css">
+    <link rel="stylesheet" href="css/_normalize.css">
 </head>
 
 <body>
